@@ -1,5 +1,6 @@
 package com.predu.evertask.util;
 
+import com.predu.evertask.exception.InvalidOperationException;
 import com.predu.evertask.exception.InvalidTokenException;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.context.MessageSource;
@@ -12,8 +13,8 @@ import org.springframework.web.bind.annotation.ControllerAdvice;
 import org.springframework.web.bind.annotation.ExceptionHandler;
 
 import javax.validation.ValidationException;
-import java.util.*;
-import java.util.stream.Collectors;
+import java.util.List;
+import java.util.Locale;
 
 @ControllerAdvice
 public class CustomRestExceptionHandler {
@@ -33,7 +34,7 @@ public class CustomRestExceptionHandler {
                 .stream()
                 .map(fieldError -> fieldError.getField() + ": "
                         + messageSource.getMessage(fieldError, locale))
-                .collect(Collectors.toList());
+                .toList();
 
         return new ResponseEntity<>(new RestMessage(errorMessages), HttpStatus.BAD_REQUEST);
     }
@@ -41,6 +42,13 @@ public class CustomRestExceptionHandler {
     @ExceptionHandler(InvalidTokenException.class)
     public ResponseEntity<RestMessage> handleInvalidTokenException(InvalidTokenException ex, Locale locale) {
         String message = messageSource.getMessage("message.token." + ex.getMessage(), null, locale);
+
+        return new ResponseEntity<>(new RestMessage(message), HttpStatus.BAD_REQUEST);
+    }
+
+    @ExceptionHandler(InvalidOperationException.class)
+    public ResponseEntity<RestMessage> handleInvalidOperationException(InvalidOperationException ex, Locale locale) {
+        String message = messageSource.getMessage("message.operation." + ex.getMessage(), null, locale);
 
         return new ResponseEntity<>(new RestMessage(message), HttpStatus.BAD_REQUEST);
     }
